Commit 2 : Working on NumbersActivity, added onclickListener and an Arralist to hold numbers

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item name="miwok_text_view" type="id">miwok_text_view</item>
     <item name="default_text_view" type="id">default_text_view</item>
+    <item name="list" type="id">list</item>
 </resources>
